plugins/kotlin/idea/tests/testData/gradle/multiplatform/core/oldImport/tier1/twoKmmLibrariesBinary/kmmConsumer/src/iosMain/kotlin/test/kmmConsumer_iosMain_usages.kt
package test

fun use() {
    // Refinement on libs work + checking that iosMain and commonMain symbols are visible
    consumeIosMainExpect(produceCommonMainExpect())
    consumeCommonMainExpect(produceIosMainExpect())

    // Refinement on expects works
    produceCommonMainExpect().iosApi()

    // jvmMain API is not visible
    <!HIGHLIGHTING("severity='ERROR'; descr='[UNRESOLVED_REFERENCE] Unresolved reference: produceJvmMainExpect'")!>produceJvmMainExpect<!>()
}
